# conway-game

./: CMakeLists.txt  main.cpp
cudaCode/: kernel.cu
